# Hollowshelf

./: .gitignore  README.md  collection_schema.sql  pyproject.toml  run.py
src/hollowshelf/: __init__.py  __main__.py  app.py  book_client.py  config.py  db.py  state.py
src/hollowshelf/book_client/: __init__.py  __main__.py  _util.py  base.py  cache.py  client.py  google_books.py  media.py  models.py  openlibrary.py
src/hollowshelf/ui/: __init__.py  book_form.py  browse.py  common.py  settings.py
