[project]
name = "hollowshelf"
version = "0.1.0"
authors = [{name = "gabriel-geissler"}]
requires-python = ">=3.12"
readme = "README.md"
description = "A personal book library, built with NiceGUI."
dependencies = [
    "nicegui>=3.13",
    "httpx>=0.27",
    "pywebview>=6.2; sys_platform !='linux'", # Win -> pythonnet/WebView2, macOS -> pyobjc, auto
    "pypwebview[qt6]>=6.2; sys_platform ==linux", # Linux -> PyQt6 + WebEngine
]

[project.scripts]
hollowshelf = "hollowshelf.app:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = ["pyrefly", "ruff", "playright>=1.60"]

#[tool.pyrefly]
#python-interpreter = ".venv/bin/python"

